# tradingview-selenium-data

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: 00_example.py  01_etfs.py  02_crypto.py  03_russell_2000.py
scripts/common/: run.py  tradingview.py
